--- a/index.html
+++ b/index.html
@@ -160,11 +160,20 @@
     <div class="container">
       <div class="wrap">
 
-        <div class="fix-12-12">
+				<div class="text-intro" id="site-type" align="center">
+
+					<div id="maintitle">
+						<h1 class="typewrite"><span>America</span></h1> <!--Change on script.js-->
+						<h1>First </h1>
+					</div>
+				</div>
+
+
+        <div class="fix-12-12" id="hometop">
           <ul class="flex fixedSpaces verticalCenter reverse">
             <li id="lalala" class="col-6-12 left middle">
-              <h1 class="ae-1 fromLeft">POP[ULIST] WORDS</h1>
-              <p class="ae-2 fromLeft"><span class="opacity-8"><br>Pop Words asks: Is there a common language in populist rhetoric? Browse to find some answers.</span></p>
+              <h1 class="ae-1 fromLeft" id="closer">POP&#32;[ULIST] &#32;&#32;&#x20;WORDS</h1>
+              <p class="ae-2 fromLeft"><span class="opacity-8"><br>Is there a common language in populist rhetoric? Browse to find some answers.</span></p>
             </li>
 
           </ul>
@@ -197,17 +206,17 @@
             <li class="col-6-12 left ae-5 fromCenter">
               <ul class="slider animated margin-top-4" data-slider-id="60-1">
                 <li class="selected fromCenter">
-                  <div class="popupTrigger videoThumbnail shadow rounded" data-popup-id="60-1">
+                  <div class="popupTrigger shadow rounded" data-popup-id="60-1">
                     <img class="wide" src="assets/img/trump.png" alt="Video Thumbnail"/>
                   </div>
                 </li>
                 <li class="fromCenter">
-                  <div class="popupTrigger videoThumbnail shadow rounded" data-popup-id="60-2">
+                  <div class="popupTrigger shadow rounded" data-popup-id="60-2">
                     <img class="wide" src="assets/img/salvini.png" alt="Video Thumbnail"/>
                   </div>
                 </li>
                 <li class="fromCenter">
-                  <div class="popupTrigger videoThumbnail shadow rounded" data-popup-id="60-3">
+                  <div class="popupTrigger shadow rounded" data-popup-id="60-3">
                     <img class="wide" src="assets/img/bolsonaro.png" alt="Video Thumbnail"/>
                   </div>
                 </li>
