--- a/index.html
+++ b/index.html
@@ -540,5 +540,14 @@
 <!-- Loading Progress Bar -->
 <div class="progress-bar blue"></div>
 
+<!--Scripts-->
+
+<script src="js/jquery.easing.min.js"></script>
+<script src="js/typed.js" type="text/javascript"></script>
+<script src="js/masonry.pkgd.min.js" type="text/javascript"></script>
+<script src="js/jquery.jkit.1.2.16.min.js"></script>
+
+<script src="js/script.js" type="text/javascript"></script>
+
 </body>
 </html>
