--- a/index.html
+++ b/index.html
@@ -1105,6 +1105,16 @@
 					<p class="ae-3 fromLeft"><span class="opacity-8"></span>We developed an automatic speech generator based on our corpus to generate populist speeches. Play aorund with our code, with you can find below.</p>
 				</div>
 
+
+				<!-- ace live code-->
+
+				<div id="editor">some text</div>
+				<script src="src/ace.js" type="text/javascript" charset="utf-8"></script>
+				<script>
+				    var editor = ace.edit("editor");
+				</script>
+				<script src="src/theme-twilight.js" type="text/javascript" charset="utf-8"></script>
+
 			<!-- Python code automatic speech generator-->
 
 				<div class="fix-12-12 topmargin">
