top pop word frequency

--- a/index.html
+++ b/index.html
@@ -412,8 +412,25 @@
 						<p class="margin-bottom-2 ae-1"><span class="opacity-6"></p>
 						<h1 class="ae-2 huge fromAbove margin-bottom-2">Top Pop Words</h1>
 					</div>
-					<p class="ae-3 fromLeft"><span class="opacity-8"></span>We analyzed each speech and the corpus as a whole for the frequencies of words to find the most common words adn word phrases. We did this analysis in general and also for specific topic words, such as religion, immigration, and patriotism.</p>
+					<p class="ae-3 fromLeft"><span class="opacity-8"></span>We analyzed each speech and the corpus as a whole for the frequencies of words to find the most common words and word phrases. We did this analysis in general and also for specific topic words, such as religio and nationalism. Feel free to download our word frequency analysis Python code to try this out in your own corpus.</p>
 
+					<!-- Python code Top Pop Words-->
+
+					<div class="fix-12-12 topmargin">
+						<ul class="grid">
+							<li class="col-12-12 center ae-5 fromCenter">
+								<a href="assets/pythonfiles/wordfrequency.py"><button class="button black gradient ae-4">Download the Python file</button></a>
+
+							</li>
+						</ul>
+					</div>
+					<div class="fix-12-12 topmargin">
+						<ul class="grid">
+							<li class="col-4-12 left"><img src="assets/img/distantreading/toppopwords/wordclouds/trump.png" height="130"/><li>
+							<li class="col-4-12 left"><img src="assets/img/distantreading/toppopwords/wordclouds/salvini.png" height="130"/><li>
+							<li class="col-4-12 left"><img src="assets/img/distantreading/toppopwords/wordclouds/bolsonaro.png" height="130"/><li>
+						</ul>
+					</div>
         </div>
 
 				<!-- Trump -->
@@ -424,48 +441,48 @@
 						<li class="col-4-12 left">
 							<p class="ae-3 fromLeft left"><span class="opacity-8"></span>Top ten most common words:</p>
 							<ul class="left">
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
+								<li>people</li>
+								<li>going</li>
+								<li>great</li>
+								<li>all</li>
+								<li>know</li>
+								<li>one</li>
+								<li>want</li>
+								<li>say</li>
+								<li>very</li>
+								<li>now</li>
 							</ul>
 						</li>
 
 						<li class="col-4-12 left">
 							<p class="ae-3 fromLeft left"><span class="opacity-8"></span>Top ten 2-word phrases:</p>
 							<ul class="left">
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
+								<li>united states</li>
+								<li>right now</li>
+								<li>never seen</li>
+								<li>going win</li>
+								<li>great people</li>
+								<li>make america</li>
+								<li>law enforcement</li>
+								<li>thank very</li>
+								<li>very much</li>
+								<li>hardest thing</li>
 							</ul>
 						</li>
 
 						<li class="col-4-12 left">
 							<p class="ae-3 fromLeft left"><span class="opacity-8"></span>Top ten 3-word phrases:</p>
 							<ul class="left">
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
+								<li>thank very much</li>
+								<li>never seen before</li>
+								<li>united states america</li>
+								<li>together make america</li>
+								<li>know nothing about</li>
+								<li>never seen anything</li>
+								<li>seen anything like</li>
+								<li>time bring home</li>
+								<li>late term abortion</li>
+								<li>again make america</li>
 							</ul>
 						</li>
 					</ul>
@@ -475,53 +492,53 @@
 				<!-- Salvini -->
 
 				<div class="fix-12-12 topmargin">
-					<h1 class="ae-2 center fromLeft">Salvini</h1>
+					<h1 class="ae-2 left fromLeft">Salvini</h1>
 					<ul class="grid">
 						<li class="col-4-12 left">
-							<p class="ae-3 fromLeft center"><span class="opacity-8"></span>Top ten most common words:</p>
-							<ul class="center">
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
+							<p class="ae-3 fromLeft "><span class="opacity-8"></span>Top ten most common words:</p>
+							<ul class="">
+								<li>because</li>
+								<li>country</li>
+								<li>people</li>
+								<li>Italy</li>
+								<li>work</li>
+								<li>government</li>
+								<li>italians</li>
+								<li>italian</li>
+								<li>one</li>
+								<li>think</li>
 							</ul>
 						</li>
 
 						<li class="col-4-12 left">
-							<p class="ae-3 fromLeft center"><span class="opacity-8"></span>Top ten 2-word phrases:</p>
-							<ul class="center">
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
+							<p class="ae-3 fromLeft "><span class="opacity-8"></span>Top ten 2-word phrases:</p>
+							<ul class="">
+								<li>italian people</li>
+								<li>million italians</li>
+								<li>president council</li>
+								<li>salvini government</li>
+								<li>talking about</li>
+								<li>women men</li>
+								<li>people want</li>
+								<li>center right</li>
+								<li>men women</li>
+								<li>democratic party</li>
 							</ul>
 						</li>
 
 						<li class="col-4-12 left">
-							<p class="ae-3 fromLeft center"><span class="opacity-8"></span>Top ten 3-word phrases:</p>
-							<ul class="center">
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
+							<p class="ae-3 fromLeft "><span class="opacity-8"></span>Top ten 3-word phrases:</p>
+							<ul class="">
+								<li>free men women</li>
+								<li>election after election</li>
+								<li>give round applause</li>
+								<li>italy returns smile</li>
+								<li>afraid give seats</li>
+								<li>salvini closed ports </li>
+								<li>half fifty fifty</li>
+								<li>courageous economic maneuver</li>
+								<li>last week house</li>
+								<li>right life right</li>
 							</ul>
 						</li>
 					</ul>
@@ -530,53 +547,53 @@
 				<!-- Bolsonaro -->
 
 				<div class="fix-12-12 topmargin">
-					<h1 class="ae-2 right fromLeft">Bolsonaro</h1>
+					<h1 class="ae-2 left fromLeft">Bolsonaro</h1>
 					<ul class="grid">
 						<li class="col-4-12 left">
-							<p class="ae-3 fromLeft right"><span class="opacity-8"></span>Top ten most common words:</p>
-							<ul class="right">
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
+							<p class="ae-3 fromLeft "><span class="opacity-8"></span>Top ten most common words:</p>
+							<ul class="">
+								<li>brazil</li>
+								<li>all</li>
+								<li>brazilian</li>
+								<li>country</li>
+								<li>people</li>
+								<li>freedom</li>
+								<li>countries</li>
+								<li>government</li>
+								<li>also</li>
+								<li>other</li>
 							</ul>
 						</li>
 
 						<li class="col-4-12 left">
-							<p class="ae-3 fromLeft right"><span class="opacity-8"></span>Top ten 2-word phrases:</p>
-							<ul class="right">
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
+							<p class="ae-3 fromLeft "><span class="opacity-8"></span>Top ten 2-word phrases:</p>
+							<ul class="">
+								<li>ladies gentlemen</li>
+								<li>other countries</li>
+								<li>human rights</li>
+								<li>head state</li>
+								<li>brailian people</li>
+								<li>above all</li>
+								<li>indigenous peoples</li>
+								<li>federative republic</li>
+								<li>thank god</li>
+								<li>new brazil</li>
 							</ul>
 						</li>
 
 						<li class="col-4-12 left">
-							<p class="ae-3 fromLeft right"><span class="opacity-8"></span>Top ten 3-word phrases:</p>
-							<ul class="right">
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
-								<li>word</li>
+							<p class="ae-3 fromLeft "><span class="opacity-8"></span>Top ten 3-word phrases:</p>
+							<ul class="">
+								<li>ladies gentlemen heads</li>
+								<li>president federative republic</li>
+								<li>federative republic brazil</li>
+								<li>brazil above all</li>
+								<li>god above all</li>
+								<li>brazilian took streets</li>
+								<li>thank very much</li>
+								<li>between mercosur european</li>
+								<li>united nations organization</li>
+								<li>military police officers</li>
 							</ul>
 						</li>
 					</ul>
@@ -589,69 +606,20 @@
             <p class="margin-bottom-2 ae-1"><span class="opacity-6"></p>
             <h1 class="ae-2 huge fromAbove margin-bottom-2">Key Words</h1>
           </div>
-					<p class="ae-3 fromLeft"><span class="opacity-8"></span>We also analyzed the frequency of words related to topics of our interest, and compared the speeches to each other.</p>
+					<p class="ae-3 fromLeft"><span class="opacity-8"></span>We also analyzed the frequency of words related to topics of our interest--religion and nationalism-- and compared the speeches to each other.</p>
           <ul class="grid fixedSpaces left margin-top-10">
-            <li class="col-4-12 col-tablet-1-2 col-phablet-1-1 ae-4 fromLeft">
+            <li class="col-12-12 col-tablet-1-2 col-phablet-1-1 ae-4 fromLeft">
              <h3>Religion</h3>
-						 <div class="price ae-5"><img src="assets/img/distantreading.png"/></div>
-             <p class="tiny opacity-6">Presence of the words: WORD, WORD, WORD, WORD</p>
+						 <div class="price ae-5"><img src="assets/img/distantreading/toppopwords/religion_words.png"/></div>
+             <p class="tiny opacity-6">Presence of the words: Bible, Gospel, God, Mary</p>
             </li>
-            <li class="col-4-12 col-tablet-1-2 col-phablet-1-1 ae-5 fromLeft">
-             <h3>Immigration</h3>
-						 <div class="price ae-5"><img src="assets/img/distantreading.png"/></div>
-						 <p class="tiny opacity-6">Presence of the words: WORD, WORD, WORD, WORD</p>
-            </li>
-            <li class="col-4-12 col-tablet-1-2 col-phablet-1-1 ae-6 fromLeft">
-             <h3>Patriotism</h3>
-						 <div class="price ae-5"><img src="assets/img/distantreading.png"/></div>
-						 <p class="tiny opacity-6">Presence of the words: WORD, WORD, WORD, WORD</p>
+            <li class="col-12-12 col-tablet-1-2 col-phablet-1-1 ae-5 fromLeft">
+             <h3>Nationalism</h3>
+						 <div class="price ae-5"><img src="assets/img/distantreading/toppopwords/nationalism.png"/></div>
+						 <p class="tiny opacity-6">Presence of the words: state, nation, country, brazil, italy, united states</p>
             </li>
           </ul>
         </div>
-
-
-				<!-- Python code Top Pop Words-->
-
-				<div class="fix-12-12 topmargin">
-					<ul class="grid">
-						<li class="col-4-12 left">
-							<p class="ae-3 fromLeft"><span class="opacity-8">Here you can find the python code we developed for word frequency analysis</span></p>
-						</li>
-						<li class="col-6-12 left ae-5 fromCenter">
-							<div class="shadow rounded">
-								<code>
-									import re <br>
-									import numpy as np<br>
-									import pandas as pd<br>
-									from pprint import pprint<br>
-
-									# Gensim<br>
-									import gensim<br>
-									import gensim.corpora as corpora<br>
-									from gensim.utils import simple_preprocess<br>
-									from gensim.models import CoherenceModel<br>
-
-									# spacy for lemmatization<br>
-									import spacy<br>
-
-									# Plotting tools<br>
-									import pyLDAvis<br>
-									import pyLDAvis.gensim  # don't skip this<br>
-									import matplotlib.pyplot as plt<br>
-									%matplotlib inline<br>
-
-									# Enable logging for gensim - optional
-									import logging
-									logging.basicConfig(format='%(asctime)s : %(levelname)s : %(message)s', level=logging.ERROR)
-
-									import warnings
-									warnings.filterwarnings("ignore",category=DeprecationWarning)
-								</code>
-							</div>
-						</li>
-					</ul>
-				</div>
-
 
       </div>
     </div>
