--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 	<!-- Custom Styles -->
 	<link href="css/custom.css" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
 	<!-- jQuery 3.3.1 -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
