--- a/index.html
+++ b/index.html
@@ -1231,12 +1231,19 @@
 				<div class="fix-12-12 topmargin">
 					<ul class="grid">
 						<li class="col-12-12 center ae-5 fromCenter">
+							<p class="ae-3 fromLeft"><span class="opacity-8"></span>Make your own right wing populist speech by trying out our Python code. Download below!</p>
 							<a href="assets/pythonfiles/speechgenerator.py"><button class="button black gradient ae-4">Download the Python file</button></a>
-
 						</li>
 					</ul>
 				</div>
 
+				<div class="fix-12-12 topmargin">
+					<ul class="grid">
+						<li class="col-12-12 center ae-5 fromCenter">
+							<p class="ae-3 fromLeft"><span class="opacity-8"></span>Check out some the automatically generated RWP sentences and paragraphs. </p>
+						</li>
+					</ul>
+				</div>
       </div>
     </div>
   </div>
