--- a/index.html
+++ b/index.html
@@ -1226,7 +1226,7 @@
 					<p class="ae-3 fromLeft"><span class="opacity-8"></span>We developed an automatic speech generator based on our corpus to generate populist speeches. Play aorund with our code, with you can find below.</p>
 				</div>
 
-				<!-- Python code Top Pop Words-->
+				<!-- Python code Speech Generator-->
 
 				<div class="fix-12-12 topmargin">
 					<ul class="grid">
