--- a/index.html
+++ b/index.html
@@ -509,22 +509,22 @@
           <ul class="grid fixedSpaces left margin-top-10">
             <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-4 fromLeft">
              <h3>Top Pop Words</h3>
-						 <div class="price ae-5"><img src="assets/img/distantreading/toppopwords/wordcloudss.png" height="150"/></div>
+						 <div class="price ae-5"><a href="#toppop"><img src="assets/img/distantreading/toppopwords/wordcloudss.png" height="150"/></a></div>
              <p class="tiny opacity-6">What are the most popular words of right wing populists?</p>
             </li>
-						<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-7 fromLeft">
-						 <h3>Lexical Complexity</h3>
-						 <div class="price ae-5"><img src="assets/img/distantreading/lexicalanalysis/unique_words.png" height="150"/></div>
-						 <p class="tiny opacity-6">How complex are the speech acts of right wing populists?</p>
-						</li>
+			<li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-7 fromLeft">
+				<h3>Lexical Complexity</h3>
+				<div class="price ae-5"><a href="#lexicalspace"><img src="assets/img/distantreading/lexicalanalysis/unique_words.png"  height="150"/></a></div>
+				<p class="tiny opacity-6">How complex are the speech acts of right wing populists?</p>
+			</li>
             <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-5 fromLeft">
              <h3>Topic Modelling</h3>
-						 <div class="price ae-5"><img src="assets/img/distantreading.png" height="150"/></div>
+						 <div class="price ae-5"><a href="#topicmodelling"><img src="assets/img/distantreading.png" height="150"/></a></div>
              <p class="tiny opacity-6">What topics are the most prevalent in each populist and across them?</p>
             </li>
             <li class="col-3-12 col-tablet-1-2 col-phablet-1-1 ae-6 fromLeft">
              <h3>Sentiment Analysis</h3>
-						 <div class="price ae-5"><img src="assets/img/distantreading.png" height="150"/></div>
+						 <div class="price ae-5"><a href="#sentiment"><img src="assets/img/distantreading.png" height="150"/></a></div>
              <p class="tiny opacity-6">Do the speeches convey more positive or negative emotion?</p>
             </li>
           </ul>
